# Home_Security_System

./: .gitignore  CMakeLists.txt  REFERENCE.md  buildHost.sh  buildTarget.sh  mockwebhook.py  readme.MD  required.txt
CentralMod/: CMakeLists.txt
CentralMod/app/: CMakeLists.txt
DoorMod/app/: doorMod.c
DoorMod/hal/src/: GPIO.c  HC-SR04.c
app/: CMakeLists.txt  doorMod.c  doorMod.h  door_system.c  system.c
app/include/: discord_alert.h  doorMod.h  http_api.h
app/src/: discordTest.c  discord_alert.c  doorMod.c  doorMod_cli.c  doorMod_withUDP_untested.c  door_system.c  door_udp_handler.c  http_api.c
gui/: INTEGRATION_GUIDE.md  MESSAGE_FLOW_EXAMPLES.md  README_WEB_CONTROL.md  UI.html  UPDATE_NOTES.md  doorAdapter.js  main.html  main.js  package-lock.json  package.json  server.js  style.css  web_control.js
gui/as3-server/: package-lock.json  package.json
gui/as3-server/lib/: beatbox_server.js
gui/as3-server/public/: index.html
gui/as3-server/public/javascripts/: beatbox_ui.js
gui/lib/: door_server.js
hal/: CMakeLists.txt
hal/include/hal/: DiscordAlert.h  GPIO.h  HC-SR04.h  PWM.h  StepperMotor.h  button.h  doorMod.h  door_tcp_client.h  door_udp.h  door_udp_client.h  hub_udp.h  led.h  led_worker.h  system_webhook.h
hal/src/: DiscordAlert.c  GPIO.c  HC-SR04.c  PWM.c  StepperMotor.c  button.c  doorMod.c  door_tcp_client.c  door_udp.c  door_udp_client.c  hub_udp.c  led.c  led_worker.c  system_webhook.c  timing.c
scripts/: udp_burst_test.sh
systemd/: door_system.service
work/CentralMod/: CMakeLists.txt
work/CentralMod/app/: CMakeLists.txt
work/CentralMod/hal/: CMakeLists.txt
work/DoorMod/: DEBUG_CONTROL.md  README.md  Readme  build-aarch64.sh  toolchain-aarch64.cmake
work/DoorMod/app/: CMakeLists.txt  doorMod.c
work/DoorMod/hal/include/hal/: GPIO.h  HC-SR04.h  StepperMotor.h  timing.h
work/DoorMod/hal/src/: GPIO.c  HC-SR04.c  StepperMotor.c  timing.c
